--- a/README
+++ b/README
@@ -1,27 +1,30 @@
-This template allows you to monitor a standalone ESXi host without any kind of host discovery that is required by zabbix official vmware template.
-The template is the same as Template Virt VMware Hypervisor but with all {HOST.HOST} variables replaced by {$UUID}
+Bulgarian language
+##################
+Този шаблон ви позволява да наблюдавате един самостоятелен ESXi хост без нуждата от discovery, както е в официалния шаблон на Zabbix за VMware.
+Шаблонът е идентичен с "Template Virt VMware Hypervisor", но всички {HOST.HOST} са заменени с {$UUID}
 
-If you have not already done so, you need to activate zabbix server vmware polling in your zabbix server configuration file (/etc/zabbix/zabbix_server.conf).
-StartVMwareCollectors should be set to a value depending on the number of host you wish to monitor: servicenum < StartVMwareCollectors < (servicenum * 2) where servicenum is the number of VMware services. 
-If you wish to monitor 1 ESXi host, set StartVMwareCollectors to 2.
+Ако все още не сте, можете да активирате Zabbix Server VMware polling на вашия Zabbix сървър в конфигурационен файл (/etc/zabbix/zabbix_server.conf). Трябва да презаредите конфигурацита на сървъра, 
+за да влезе в сила новата конфигурация.
+Параметър StartVMwareCollectors трябва да има стойност, която е в зависимост от колко броя сървъри (hosts) ще наблюдавате. Формулата за изчилсяване е както следва:
+servicenum < StartVMwareCollectors < (servicenum * 2) където servicenum е брой на VMware services.
+Ако планирате да наблюдавате 1 ESXi host, настройте  StartVMwareCollectors да е 2.
 
-Import this template to your templates inventory.
-Create an host for your ESXi hypervisor. You don't need any agent/ipmi/snmp interfaces.
-Link the host to this template.
-Creates 4 macros :
-  {$URL}      -> https://esxi.hostname/sdk 
-  {$USERNAME} -> any esxi user that have at least readonly access (recommended for obvious security reason)
-  {$PASSWORD} -> the user's password
-  {$UUID}     -> esxi host UUID
+Импортирайте този шаблон (Virt_VMware_Hypervisor_standalone_no_discovery.xml) в Zabbix (Configuration/Templates и бутон Import /горен десен угъл/).
+Създайте нов или редактирайте наличен host. Няма нужда от каквито и да е опции, като - agent,ipmi или snmp интерфейси.
+Добавете шаблона към този host, като в секцията Macros, добавете следните 4 стойности:
+  {$URL}      -> https://адрес-на-esx-мениджмънт-интерфейса/sdk  (трябва да е достъпен от Zabbix сървъра ви)
+  {$USERNAME} -> Произволен ESXi потребител, който има поне readonly достъп до този host
+  {$PASSWORD} -> Паролата за този потребител
+  {$UUID}     -> UUID на този host
 
-*How to obtain ESXi UUID*
-0. You need to enable MOB vib as esxcli does not seems to provide the valid uuid for this.
-1. enable MOB vib using one of these methods : 
-    * Using vsphere client : Go to you're vsphere Advanced Settings, Config, Hostagent, plugins, solo, check "Config.HostAgent.plugins.solo.enableMob"
-    * Using esxi console : `vim-cmd hostsvc/advopt/update Config.HostAgent.plugins.solo.enableMob bool true`
-    * Using Powercli : `Get-VMHost #IPADDRESS | Set-VMHostAdvancedConfiguration -Name Config.HostAgent.plugins.solo.enableMob -Value True`
-2. Browse to https://esxi.hostname/mob/?moid=ha-host&doPath=hardware.systemInfo
-3. disable MOB vib again :
-    * Using vsphere client : uncheck Config.HostAgent.plugins.solo.enableMob
-    * Using esxi console : `vim-cmd hostsvc/advopt/update Config.HostAgent.plugins.solo.enableMob bool false`
-    * Using Powercli : `Get-VMHost #IPADDRESS | Set-VMHostAdvancedConfiguration -Name Config.HostAgent.plugins.solo.enableMob -Value False`
+*Как да разберете ESXi UUID*
+0. Трябва да активирате MOB vib, тъй като esxcli не показва валиден UUID
+1. Активане на MOB vib чрез един от следните начини:
+    * vSphere клиент: Advanced Settings, Config, Hostagent, plugins, solo, check "Config.HostAgent.plugins.solo.enableMob"
+    * ESXi конзола: `vim-cmd hostsvc/advopt/update Config.HostAgent.plugins.solo.enableMob bool true`
+    * Powercli: `Get-VMHost #IPADDRESS | Set-VMHostAdvancedConfiguration -Name Config.HostAgent.plugins.solo.enableMob -Value True`
+2. Отворете браузъра и за адрес https://адрес-на-esx-мениджмънт-интерфейса/mob/?moid=ha-host&doPath=hardware.systemInfo (
+3. Деактивиране на  MOB vib:
+    * vSphere клиент: uncheck Config.HostAgent.plugins.solo.enableMob
+    * ESXi конзола: `vim-cmd hostsvc/advopt/update Config.HostAgent.plugins.solo.enableMob bool false`
+    * Powercli: `Get-VMHost #IPADDRESS | Set-VMHostAdvancedConfiguration -Name Config.HostAgent.plugins.solo.enableMob -Value False`
